--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker:
 
 before_install:
-  - docker build -t heyshelton1/react-test -f ./client/Dockerfile.dev
+  - docker build -t heyshelton1/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
   - docker run -e CI=true heyshelton1/react-test npm test
